added max page to filter and search ednpoint
